# pybench

./: Pipfile  README.rst  pyproject.toml  setup.py
pybench/: __init__.py  __meta__.py  core.py  graph.py  logdata.py
pybench/benchmark/: __init__.py  numpy.py  python.py  tensorflow.py
